Delete product #14
